--- a/eastcoastpark/index.html
+++ b/eastcoastpark/index.html
@@ -76,7 +76,7 @@ img {
 </p>
 
 
-<img src="parkland.jpg" width="600" height="300" alt="Parkland Green" title="Parkland Green">
+<img src="parklandgreen.jpg" width="600" height="300" alt="Parkland Green" title="Parkland Green">
 
 
 
